[package]
name = "length-prefixed-stream"
version = "1.0.0"
description = "decode a byte stream of varint length-encoded messages into a stream of chunks"
edition = "2018"
license = "BSD-3-Clause"
readme = "readme.md"
repository = "https://github.com/substack/length-prefixed-stream.rs"
homepage = "https://github.com/substack/length-prefixed-stream.rs"

[dependencies]
async-std = "1.9.0"
desert = "2.0.0"
futures = "0.3.12"
futures-core = "0.3.12"
pin-project-lite = "0.2.4"
